package zombie;

import view.GamePanel;

/**
 * Created by Armin on 6/29/2016.
 */
public class ConeHeadZombie extends Zombie {

    public ConeHeadZombie(GamePanel parent, int lane) {
        super(parent, lane);
        setHealth(1800);
    }
}
