package zombie;

import view.GamePanel;

/**
 * Created by Armin on 6/25/2016.
 */
public class NormalZombie extends Zombie {

    public NormalZombie(GamePanel parent, int lane) {
        super(parent, lane);
    }

}
